<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/user_login"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/user_registration"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/uName"
        app:layout_constraintTop_toBottomOf="@+id/user_login"
        android:textSize="25sp"
        android:hint="@string/enter_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="textPersonName" />
    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/ugmail"
        app:layout_constraintTop_toBottomOf="@+id/uName"
        android:textSize="25sp"
        android:hint="@string/prompt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />
    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/upass"
        app:layout_constraintTop_toBottomOf="@+id/ugmail"
        android:textSize="25sp"
        android:hint="@string/prompt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="textPassword" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:background="#ff669900"
        android:id="@+id/register"
        app:layout_constraintTop_toBottomOf="@+id/upass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />
<TextView
    android:id="@+id/tLoginCloud"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:textSize="16sp"
    android:text="already have account ? cloud SigIn"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/register"
    />


</androidx.constraintlayout.widget.ConstraintLayout>