<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    tools:context=".LocalLogin">
    <ScrollView
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:scrollbarStyle="insideOverlay"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/user_login2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/local_login"
                android:textSize="30sp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <EditText
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:id="@+id/u_mail2"
                app:layout_constraintTop_toBottomOf="@+id/user_login2"
                android:textSize="25sp"
                android:hint="@string/enter_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:inputType="textEmailAddress" />
            <EditText
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:id="@+id/u_pass2"
                app:layout_constraintTop_toBottomOf="@+id/u_mail2"
                android:textSize="25sp"
                android:hint="@string/prompt_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:inputType="numberPassword" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toBottomOf="@+id/u_pass2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:background="#ff669900"
                android:id="@+id/sign_in2"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp" />

            <TextView
                android:id="@+id/sign_up"
                android:layout_width="40dp"
                android:layout_height="24dp"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sign_in2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout >