<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CloudLogin"
    >
    <TextView
        android:id="@+id/user_login2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/cloud_login"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/c_eMail"
        app:layout_constraintTop_toBottomOf="@+id/user_login2"
        android:textSize="25sp"
        android:hint="@string/prompt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:inputType="textEmailAddress" />
    <EditText
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:id="@+id/c_ePass"
        app:layout_constraintTop_toBottomOf="@+id/c_eMail"
        android:textSize="25sp"
        android:hint="@string/prompt_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:inputType="numberPassword" />


    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/action_sign_in"
        android:background="#ff669900"
        android:id="@+id/c_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/c_ePass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />
    <TextView
        android:id="@+id/c_resetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password"
        android:textSize="15sp"
        android:layout_marginLeft="15sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_sign_in"
        app:layout_constraintEnd_toStartOf="@+id/cSign_up"
        android:layout_marginStart="15sp" />

    <TextView
        android:id="@+id/cSign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@+id/c_resetPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/c_sign_in" />

<TextView
    android:id="@+id/cOR"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25sp"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:text="OR"
    android:textSize="25sp"
    app:layout_constraintTop_toBottomOf="@+id/cSign_up"/>



    <ImageView
        android:id="@+id/googleImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/googleimage"
        app:layout_constraintTop_toBottomOf="@+id/cOR"/>
</androidx.constraintlayout.widget.ConstraintLayout>