<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    tools:context=".MainActivity">
    <ScrollView
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:scrollbarStyle="insideOverlay">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/activity_label"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/main_activity_title"
                android:textColor="#000000"
                android:textSize="30sp"
                android:layout_marginLeft="80dp"
                android:layout_marginRight="80dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/activity_message"
                app:layout_constraintTop_toBottomOf="@+id/activity_label"
                android:text="@string/main_activity_description"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/activity_label"
                app:layout_constraintStart_toStartOf="@+id/activity_label"
                android:textColor="#ffcc0000"
                tools:ignore="MissingConstraints" />
            <Button
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/activity_message"
                app:layout_constraintEnd_toEndOf="@+id/activity_message"
                app:layout_constraintStart_toStartOf="@+id/activity_message"
                android:text="@string/basic_login"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:id="@+id/button1"
                android:background="#ff669900" />

            <Button
                android:id="@+id/button2"
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="#ff0099cc"
                android:text="@string/local_login"
                android:textColor="#ffffff"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/button1"
                app:layout_constraintStart_toStartOf="@+id/button1"
                app:layout_constraintTop_toBottomOf="@+id/button1" />
            <Button
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toBottomOf="@+id/button2"
                app:layout_constraintEnd_toEndOf="@+id/button2"
                app:layout_constraintStart_toStartOf="@+id/button2"
                android:text="@string/cloud_login"
                android:textSize="15sp"
                android:textColor="#ffffff"
                android:id="@+id/button3"
                android:background="#ffaa66cc" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ad_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/banner_ad_unit_id"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout >