<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer"
    tools:context=".BasicLogin">
    <ScrollView
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:scrollbarStyle="insideOverlay"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/user_login"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="@string/basic_login"
                android:textSize="30sp"
                android:layout_marginTop="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.484"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:id="@+id/u_mail"
                app:layout_constraintTop_toBottomOf="@+id/user_login"
                android:textSize="25sp"
                android:hint="@string/prompt_email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="50dp"
                android:autofillHints=""
                android:inputType="textEmailAddress" />
            <EditText
                android:layout_width="240dp"
                android:layout_height="50dp"
                android:id="@+id/u_pass"
                app:layout_constraintTop_toBottomOf="@+id/u_mail"
                android:textSize="25sp"
                android:hint="@string/prompt_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:inputType="numberPassword" />
            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:background="#ff669900"
                android:id="@+id/sign_in"
                app:layout_constraintTop_toBottomOf="@+id/u_pass"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="30dp" />
            <TextView
                android:layout_width="100dp"
                android:layout_height="25dp"
                android:id="@+id/attempt"
                app:layout_constraintTop_toBottomOf="@+id/sign_in"
                android:layout_marginTop="30dp"
                app:layout_constraintStart_toStartOf="@+id/sign_in"
                app:layout_constraintEnd_toEndOf="@+id/sign_in"
                android:textSize="15sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/nav_view"
        app:menu="@menu/nav_menu"
        android:layout_gravity="start">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout >